[package]
name = "actuallybevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_winit", "bevy_ui", "bevy_text", "bevy_audio", "bevy_asset", "wayland", "x11", "wav", "png", "hdr"], default-features = false }
bevy_rapier2d = "0.21.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
